kqed_dev4/src/objects/SFDC_Feature_Request__c.object
<CustomObject>
    <description>Feature Requests may come from customers and internal groups. They may be associated with related Bugs, and should be assigned an appropriate Product Manager to determine whether this Feature Request is rolled into a product release.</description>
    <fields>
        <fullName>Bug_Problem_Description__c</fullName>
        <label>Bug Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N50000001QGnvEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>SFDC_Component__c</referenceTo>
        <relationshipName>R00N50000001QGo0EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001QGo3EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <label>Feature Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Subject__c</fullName>
        <label>Feature Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs-Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release #</label>
        <picklist>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Origin__c</fullName>
        <label>Request Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>Assigned PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001QGo7EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feature Request</label>
    <listViews>
        <fullName>AllFeatureRequests</fullName>
        <columns>NAME</columns>
        <columns>Component__c</columns>
        <columns>Feature_Subject__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Feature Requests</label>
    </listViews>
    <nameField>
        <label>Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>